--- a/client/page/include/product_list.html
+++ b/client/page/include/product_list.html
@@ -7,9 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
   <!-- <link rel="stylesheet" href="./css/style.css" /> -->
-  <link rel="stylesheet" as="style" crossorigin
-    href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css" />
-  <link rel="stylesheet" href="/client/css/include/product_list.css" />
+  <link rel="stylesheet" href="../../css/style.css" />
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="./js/main.js" type="module" defer></script>
   <title>Product list</title>
@@ -18,10 +16,18 @@
 <body>
   <section class="product-list">
     <h2 class="product-list__title">베스트</h2>
-    <div>
-      <p class="product-list--sum">총294건</p>
+    <div class="product-list__inner">
+      <p class="product-list--sum">총 284건</p>
       <ul class="product-list__sort">
-        <li><a href="/">추천순</a></li>
+        <li><a href="/">추천순<span class="circle-icon">
+              <svg class="question-icon" width="6" height="9" viewBox="0 0 6 9" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M0.5 2.21081H1.77027C1.81351 1.55135 2.26216 1.12973 2.95946 1.12973C3.64054 1.12973 4.09459 1.53514 4.09459 2.0973C4.09459 2.58784 3.90383 2.86944 3.35576 3.22524L3.1973 3.32432C2.45135 3.76216 2.13784 4.24865 2.18649 5.05946L2.19189 5.42703H3.44595V5.11892C3.44595 4.58378 3.64595 4.30811 4.35405 3.89189C5.08919 3.45405 5.5 2.87568 5.5 2.04865C5.5 0.85405 4.51081 0 3.02973 0C1.42432 0 0.54324 0.92973 0.5 2.21081ZM2.87838 8.0054C2.33784 8.0054 1.98108 7.6649 1.98108 7.1459C1.98108 6.62162 2.33784 6.28108 2.87838 6.28108C3.42973 6.28108 3.77568 6.62162 3.77568 7.1459C3.77568 7.6649 3.42973 8.0054 2.87838 8.0054Z"
+                  fill="#CCCCCC" />
+              </svg>
+            </span>
+          </a></li>
         <li><a href="/">신상품순</a></li>
         <li><a href="/">판매량순</a></li>
         <li><a href="/">혜택순</a></li>
@@ -30,146 +36,157 @@
       </ul>
     </div>
     <dl class="product-list__list-wrapper">
-      <div class="product-list__item">
-        <dt id="tangtang_jjolmyeon" class="product--title">[풀무원] 탱탱쫄면 (4개입)</dt>
-        <dd><img src="../../assets/product_list/tangtang_jjolmyeon.jpg" alt="" aria-labelledby="tangtang_jjolmyeon" />
-        </dd>
-        <dd class="product--price">4,980원</dd>
-        <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
-        <dd><span class="karly-only">Karly Only</span></dd>
-        <dd><span class="limited-offer">한정수량</span></dd>
+      <div class="product-list__item"><a href="#">
+          <dt id="tangtang_jjolmyeon" class="product--title">[풀무원] 탱탱쫄면 (4개입)</dt>
+          <dd><img src="../../assets/product_list/tangtang_jjolmyeon.jpg" alt="" aria-labelledby="tangtang_jjolmyeon" />
+          </dd>
+          <dd class="product--price">4,980원</dd>
+          <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
+          <dd><span class="karly-only">Karly Only</span></dd>
+          <dd><span class="limited-offer">한정수량</span></dd>
+        </a>
       </div>
-      <div class="product-list__item">
-        <dt id="jyoleudi_sun_cushion" class="product--title">[온더바디] 죠르디 시카 자석 선쿠션</dt>
-        <dd><img src="../../assets/product_list/jyoleudi_sun_cushion.jpg" alt=""
-            aria-labelledby="jyoleudi_sun_cushion" />
-        </dd>
-        <dd class="product--price">32,500원</dd>
-        <dd class="product--summary">끈적임 없이 보송한 무기자차 선쿠션</dd>
+      <div class="product-list__item"><a href="#">
+          <dt id="jyoleudi_sun_cushion" class="product--title">[온더바디] 죠르디 시카 자석 선쿠션</dt>
+          <dd><img src="../../assets/product_list/jyoleudi_sun_cushion.jpg" alt=""
+              aria-labelledby="jyoleudi_sun_cushion" />
+          </dd>
+          <dd class="product--price">32,500원</dd>
+          <dd class="product--summary">끈적임 없이 보송한 무기자차 선쿠션</dd>
+        </a>
       </div>
-      <div class="product-list__item">
-        <dt id="baby_laundry_detergent" class="product--title">[프로쉬] 베이비 세탁세제</dt>
-        <dd><img src="../../assets/product_list/baby_laundry_detergent.jpg" alt=""
-            aria-labelledby="baby_laundry_detergent" />
-        </dd>
-        <dd><span class="product--discount">24%</span></dd>
-        <dd class="product--price">18,980원</dd>
-        <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
-        <dd><span class="karly-only">Karly Only</span></dd>
-        <dd><span class="limited-offer">한정수량</span></dd>
+      <div class="product-list__item"><a href="#">
+          <dt id="baby_laundry_detergent" class="product--title">[프로쉬] 베이비 세탁세제</dt>
+          <dd><img src="../../assets/product_list/baby_laundry_detergent.jpg" alt=""
+              aria-labelledby="baby_laundry_detergent" />
+          </dd>
+          <dd class="product--price price--original">18,980원</dd>
+          <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
+          <dd><span class="karly-only">Karly Only</span></dd>
+          <dd><span class="limited-offer">한정수량</span></dd>
+        </a>
       </div>
-      <div class="product-list__item">
-        <dt id="tangtang_jjolmyeon" class="product--title">[풀무원] 탱탱쫄면 (4개입)</dt>
-        <dd><img src="../../assets/product_list/tangtang_jjolmyeon.jpg" alt="" aria-labelledby="tangtang_jjolmyeon" />
-        </dd>
-        <dd class="product--price">4,980원</dd>
-        <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
-        <dd><span class="karly-only">Karly Only</span></dd>
-        <dd><span class="limited-offer">한정수량</span></dd>
+      <div class="product-list__item"><a href="#">
+          <dt id="tangtang_jjolmyeon" class="product--title">[풀무원] 탱탱쫄면 (4개입)</dt>
+          <dd><img src="../../assets/product_list/tangtang_jjolmyeon.jpg" alt="" aria-labelledby="tangtang_jjolmyeon" />
+          </dd>
+          <dd class="product--price">4,980원</dd>
+          <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
+          <dd><span class="karly-only">Karly Only</span></dd>
+          <dd><span class="limited-offer">한정수량</span></dd>
+        </a>
       </div>
-      <div class="product-list__item">
-        <dt id="jyoleudi_sun_cushion" class="product--title">[온더바디] 죠르디 시카 자석 선쿠션</dt>
-        <dd><img src="../../assets/product_list/jyoleudi_sun_cushion.jpg" alt=""
-            aria-labelledby="jyoleudi_sun_cushion" />
-        </dd>
-        <dd class="product--price">32,500원</dd>
-        <dd class="product--summary">끈적임 없이 보송한 무기자차 선쿠션</dd>
+      <div class="product-list__item"><a href="#">
+          <dt id="jyoleudi_sun_cushion" class="product--title">[온더바디] 죠르디 시카 자석 선쿠션</dt>
+          <dd><img src="../../assets/product_list/jyoleudi_sun_cushion.jpg" alt=""
+              aria-labelledby="jyoleudi_sun_cushion" />
+          </dd>
+          <dd class="product--price">32,500원</dd>
+          <dd class="product--summary">끈적임 없이 보송한 무기자차 선쿠션</dd>
+        </a>
       </div>
-      <div class="product-list__item">
-        <dt id="baby_laundry_detergent" class="product--title">[프로쉬] 베이비 세탁세제</dt>
-        <dd><img src="../../assets/product_list/baby_laundry_detergent.jpg" alt=""
-            aria-labelledby="baby_laundry_detergent" />
-        </dd>
-        <dd><span class="product--discount">24%</span></dd>
-        <dd class="product--price">18,980원</dd>
-        <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
-        <dd><span class="karly-only">Karly Only</span></dd>
-        <dd><span class="limited-offer">한정수량</span></dd>
+      <div class="product-list__item"><a href="#">
+          <dt id="baby_laundry_detergent" class="product--title">[프로쉬] 베이비 세탁세제</dt>
+          <dd><img src="../../assets/product_list/baby_laundry_detergent.jpg" alt=""
+              aria-labelledby="baby_laundry_detergent" />
+          </dd>
+          <dd class="product--price price--original">18,980원</dd>
+          <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
+          <dd><span class="karly-only">Karly Only</span></dd>
+          <dd><span class="limited-offer">한정수량</span></dd>
+        </a>
       </div>
-      <div class="product-list__item">
-        <dt id="tangtang_jjolmyeon" class="product--title">[풀무원] 탱탱쫄면 (4개입)</dt>
-        <dd><img src="../../assets/product_list/tangtang_jjolmyeon.jpg" alt="" aria-labelledby="tangtang_jjolmyeon" />
-        </dd>
-        <dd class="product--price">4,980원</dd>
-        <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
-        <dd><span class="karly-only">Karly Only</span></dd>
-        <dd><span class="limited-offer">한정수량</span></dd>
+      <div class="product-list__item"><a href="#">
+          <dt id="tangtang_jjolmyeon" class="product--title">[풀무원] 탱탱쫄면 (4개입)</dt>
+          <dd><img src="../../assets/product_list/tangtang_jjolmyeon.jpg" alt="" aria-labelledby="tangtang_jjolmyeon" />
+          </dd>
+          <dd class="product--price">4,980원</dd>
+          <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
+          <dd><span class="karly-only">Karly Only</span></dd>
+          <dd><span class="limited-offer">한정수량</span></dd>
+        </a>
       </div>
-      <div class="product-list__item">
-        <dt id="jyoleudi_sun_cushion" class="product--title">[온더바디] 죠르디 시카 자석 선쿠션</dt>
-        <dd><img src="../../assets/product_list/jyoleudi_sun_cushion.jpg" alt=""
-            aria-labelledby="jyoleudi_sun_cushion" />
-        </dd>
-        <dd class="product--price">32,500원</dd>
-        <dd class="product--summary">끈적임 없이 보송한 무기자차 선쿠션</dd>
+      <div class="product-list__item"><a href="#">
+          <dt id="jyoleudi_sun_cushion" class="product--title">[온더바디] 죠르디 시카 자석 선쿠션</dt>
+          <dd><img src="../../assets/product_list/jyoleudi_sun_cushion.jpg" alt=""
+              aria-labelledby="jyoleudi_sun_cushion" />
+          </dd>
+          <dd class="product--price">32,500원</dd>
+          <dd class="product--summary">끈적임 없이 보송한 무기자차 선쿠션</dd>
+        </a>
       </div>
-      <div class="product-list__item">
-        <dt id="baby_laundry_detergent" class="product--title">[프로쉬] 베이비 세탁세제</dt>
-        <dd><img src="../../assets/product_list/baby_laundry_detergent.jpg" alt=""
-            aria-labelledby="baby_laundry_detergent" />
-        </dd>
-        <dd><span class="product--discount">24%</span></dd>
-        <dd class="product--price">18,980원</dd>
-        <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
-        <dd><span class="karly-only">Karly Only</span></dd>
-        <dd><span class="limited-offer">한정수량</span></dd>
+      <div class="product-list__item"><a href="#">
+          <dt id="baby_laundry_detergent" class="product--title">[프로쉬] 베이비 세탁세제</dt>
+          <dd><img src="../../assets/product_list/baby_laundry_detergent.jpg" alt=""
+              aria-labelledby="baby_laundry_detergent" />
+          </dd>
+          <dd class="product--price price--original">18,980원</dd>
+          <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
+          <dd><span class="karly-only">Karly Only</span></dd>
+          <dd><span class="limited-offer">한정수량</span></dd>
+        </a>
       </div>
-      <div class="product-list__item">
-        <dt id="tangtang_jjolmyeon" class="product--title">[풀무원] 탱탱쫄면 (4개입)</dt>
-        <dd><img src="../../assets/product_list/tangtang_jjolmyeon.jpg" alt="" aria-labelledby="tangtang_jjolmyeon" />
-        </dd>
-        <dd class="product--price">4,980원</dd>
-        <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
-        <dd><span class="karly-only">Karly Only</span></dd>
-        <dd><span class="limited-offer">한정수량</span></dd>
+      <div class="product-list__item"><a href="#">
+          <dt id="tangtang_jjolmyeon" class="product--title">[풀무원] 탱탱쫄면 (4개입)</dt>
+          <dd><img src="../../assets/product_list/tangtang_jjolmyeon.jpg" alt="" aria-labelledby="tangtang_jjolmyeon" />
+          </dd>
+          <dd class="product--price">4,980원</dd>
+          <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
+          <dd><span class="karly-only">Karly Only</span></dd>
+          <dd><span class="limited-offer">한정수량</span></dd>
+        </a>
       </div>
-      <div class="product-list__item">
-        <dt id="jyoleudi_sun_cushion" class="product--title">[온더바디] 죠르디 시카 자석 선쿠션</dt>
-        <dd><img src="../../assets/product_list/jyoleudi_sun_cushion.jpg" alt=""
-            aria-labelledby="jyoleudi_sun_cushion" />
-        </dd>
-        <dd class="product--price">32,500원</dd>
-        <dd class="product--summary">끈적임 없이 보송한 무기자차 선쿠션</dd>
+      <div class="product-list__item"><a href="#">
+          <dt id="jyoleudi_sun_cushion" class="product--title">[온더바디] 죠르디 시카 자석 선쿠션</dt>
+          <dd><img src="../../assets/product_list/jyoleudi_sun_cushion.jpg" alt=""
+              aria-labelledby="jyoleudi_sun_cushion" />
+          </dd>
+          <dd class="product--price">32,500원</dd>
+          <dd class="product--summary">끈적임 없이 보송한 무기자차 선쿠션</dd>
+        </a>
       </div>
-      <div class="product-list__item">
-        <dt id="baby_laundry_detergent" class="product--title">[프로쉬] 베이비 세탁세제</dt>
-        <dd><img src="../../assets/product_list/baby_laundry_detergent.jpg" alt=""
-            aria-labelledby="baby_laundry_detergent" />
-        </dd>
-        <dd><span class="product--discount">24%</span></dd>
-        <dd class="product--price">18,980원</dd>
-        <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
-        <dd><span class="karly-only">Karly Only</span></dd>
-        <dd><span class="limited-offer">한정수량</span></dd>
+      <div class="product-list__item"><a href="#">
+          <dt id="baby_laundry_detergent" class="product--title">[프로쉬] 베이비 세탁세제</dt>
+          <dd><img src="../../assets/product_list/baby_laundry_detergent.jpg" alt=""
+              aria-labelledby="baby_laundry_detergent" />
+          </dd>
+          <dd class="product--price price--original">18,980원</dd>
+          <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
+          <dd><span class="karly-only">Karly Only</span></dd>
+          <dd><span class="limited-offer">한정수량</span></dd>
+        </a>
       </div>
-      <div class="product-list__item">
-        <dt id="tangtang_jjolmyeon" class="product--title">[풀무원] 탱탱쫄면 (4개입)</dt>
-        <dd><img src="../../assets/product_list/tangtang_jjolmyeon.jpg" alt="" aria-labelledby="tangtang_jjolmyeon" />
-        </dd>
-        <dd class="product--price">4,980원</dd>
-        <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
-        <dd><span class="karly-only">Karly Only</span></dd>
-        <dd><span class="limited-offer">한정수량</span></dd>
+      <div class="product-list__item"><a href="#">
+          <dt id="tangtang_jjolmyeon" class="product--title">[풀무원] 탱탱쫄면 (4개입)</dt>
+          <dd><img src="../../assets/product_list/tangtang_jjolmyeon.jpg" alt="" aria-labelledby="tangtang_jjolmyeon" />
+          </dd>
+          <dd class="product--price">4,980원</dd>
+          <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
+          <dd><span class="karly-only">Karly Only</span></dd>
+          <dd><span class="limited-offer">한정수량</span></dd>
+        </a>
       </div>
-      <div class="product-list__item">
-        <dt id="jyoleudi_sun_cushion" class="product--title">[온더바디] 죠르디 시카 자석 선쿠션</dt>
-        <dd><img src="../../assets/product_list/jyoleudi_sun_cushion.jpg" alt=""
-            aria-labelledby="jyoleudi_sun_cushion" />
-        </dd>
-        <dd class="product--price">32,500원</dd>
-        <dd class="product--summary">끈적임 없이 보송한 무기자차 선쿠션</dd>
+      <div class="product-list__item"><a href="#">
+          <dt id="jyoleudi_sun_cushion" class="product--title">[온더바디] 죠르디 시카 자석 선쿠션</dt>
+          <dd><img src="../../assets/product_list/jyoleudi_sun_cushion.jpg" alt=""
+              aria-labelledby="jyoleudi_sun_cushion" />
+          </dd>
+          <dd class="product--price">32,500원</dd>
+          <dd class="product--summary">끈적임 없이 보송한 무기자차 선쿠션</dd>
+        </a>
       </div>
-      <div class="product-list__item">
-        <dt id="baby_laundry_detergent" class="product--title">[프로쉬] 베이비 세탁세제</dt>
-        <dd><img src="../../assets/product_list/baby_laundry_detergent.jpg" alt=""
-            aria-labelledby="baby_laundry_detergent" />
-        </dd>
-        <dd><span class="product--discount">24%</span></dd>
-        <dd class="product--price">18,980원</dd>
-        <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
-        <dd><span class="karly-only">Karly Only</span></dd>
-        <dd><span class="limited-offer">한정수량</span></dd>
+      <div class="product-list__item"><a href="#">
+          <dt id="baby_laundry_detergent" class="product--title">[프로쉬] 베이비 세탁세제</dt>
+          <dd><img src="../../assets/product_list/baby_laundry_detergent.jpg" alt=""
+              aria-labelledby="baby_laundry_detergent" />
+          </dd>
+          <dd class="product--price price--original">18,980원</dd>
+          <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
+          <dd><span class="karly-only">Karly Only</span></dd>
+          <dd><span class="limited-offer">한정수량</span></dd>
+        </a>
       </div>
+
     </dl>
     <div class="product-list__buttion-wrapper">
       <button type="submit"></button>
