Rename to more accurate class name (#13)

--- a/client/page/include/product_list.html
+++ b/client/page/include/product_list.html
@@ -43,7 +43,7 @@
           <dd class="product--price">4,980원</dd>
           <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
           <dd><span class="karly-only">Karly Only</span></dd>
-          <dd><span class="limited-offer">한정수량</span></dd>
+          <dd><span class="limited--bedge">한정수량</span></dd>
         </a>
       </div>
       <div class="product-list__item"><a href="#">
@@ -63,7 +63,7 @@
           <dd class="product--price price--original">18,980원</dd>
           <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
           <dd><span class="karly-only">Karly Only</span></dd>
-          <dd><span class="limited-offer">한정수량</span></dd>
+          <dd><span class="limited--bedge">한정수량</span></dd>
         </a>
       </div>
       <div class="product-list__item"><a href="#">
@@ -73,7 +73,7 @@
           <dd class="product--price">4,980원</dd>
           <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
           <dd><span class="karly-only">Karly Only</span></dd>
-          <dd><span class="limited-offer">한정수량</span></dd>
+          <dd><span class="limited--bedge">한정수량</span></dd>
         </a>
       </div>
       <div class="product-list__item"><a href="#">
@@ -93,7 +93,7 @@
           <dd class="product--price price--original">18,980원</dd>
           <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
           <dd><span class="karly-only">Karly Only</span></dd>
-          <dd><span class="limited-offer">한정수량</span></dd>
+          <dd><span class="limited--bedge">한정수량</span></dd>
         </a>
       </div>
       <div class="product-list__item"><a href="#">
@@ -103,7 +103,7 @@
           <dd class="product--price">4,980원</dd>
           <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
           <dd><span class="karly-only">Karly Only</span></dd>
-          <dd><span class="limited-offer">한정수량</span></dd>
+          <dd><span class="limited--bedge">한정수량</span></dd>
         </a>
       </div>
       <div class="product-list__item"><a href="#">
@@ -123,7 +123,7 @@
           <dd class="product--price price--original">18,980원</dd>
           <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
           <dd><span class="karly-only">Karly Only</span></dd>
-          <dd><span class="limited-offer">한정수량</span></dd>
+          <dd><span class="limited--bedge">한정수량</span></dd>
         </a>
       </div>
       <div class="product-list__item"><a href="#">
@@ -133,7 +133,7 @@
           <dd class="product--price">4,980원</dd>
           <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
           <dd><span class="karly-only">Karly Only</span></dd>
-          <dd><span class="limited-offer">한정수량</span></dd>
+          <dd><span class="limited--bedge">한정수량</span></dd>
         </a>
       </div>
       <div class="product-list__item"><a href="#">
@@ -153,7 +153,7 @@
           <dd class="product--price price--original">18,980원</dd>
           <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
           <dd><span class="karly-only">Karly Only</span></dd>
-          <dd><span class="limited-offer">한정수량</span></dd>
+          <dd><span class="limited--bedge">한정수량</span></dd>
         </a>
       </div>
       <div class="product-list__item"><a href="#">
@@ -163,7 +163,7 @@
           <dd class="product--price">4,980원</dd>
           <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
           <dd><span class="karly-only">Karly Only</span></dd>
-          <dd><span class="limited-offer">한정수량</span></dd>
+          <dd><span class="limited--bedge">한정수량</span></dd>
         </a>
       </div>
       <div class="product-list__item"><a href="#">
@@ -183,7 +183,7 @@
           <dd class="product--price price--original">18,980원</dd>
           <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
           <dd><span class="karly-only">Karly Only</span></dd>
-          <dd><span class="limited-offer">한정수량</span></dd>
+          <dd><span class="limited--bedge">한정수량</span></dd>
         </a>
       </div>
 
