--- a/client/page/include/footer.html
+++ b/client/page/include/footer.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../../css/common/reset.css">
   <link rel="stylesheet" href="../../css/common/a11y.css">
   <link rel="stylesheet" href="../../css/common/font.css">
+  <link rel="stylesheet" href="../../css/style.css">
   <link rel="stylesheet" href="../../css/include/footer.css">
   <title>footer</title>
 </head>
