--- a/client/page/include/product_list.html
+++ b/client/page/include/product_list.html
@@ -42,8 +42,8 @@
           </dd>
           <dd class="product--price">4,980원</dd>
           <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
-          <dd><span class="karly-only">Karly Only</span></dd>
-          <dd><span class="limited--bedge">한정수량</span></dd>
+          <span class="karly-only">Karly Only</span>
+          <span class="limited--bedge">한정수량</span>
         </a>
       </div>
       <div class="product-list__item"><a href="#">
@@ -62,8 +62,8 @@
           </dd>
           <dd class="product--price price--original">18,980원</dd>
           <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
-          <dd><span class="karly-only">Karly Only</span></dd>
-          <dd><span class="limited--bedge">한정수량</span></dd>
+          <span class="karly-only">Karly Only</span>
+          <span class="limited--bedge">한정수량</span>
         </a>
       </div>
       <div class="product-list__item"><a href="#">
@@ -72,8 +72,8 @@
           </dd>
           <dd class="product--price">4,980원</dd>
           <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
-          <dd><span class="karly-only">Karly Only</span></dd>
-          <dd><span class="limited--bedge">한정수량</span></dd>
+          <span class="karly-only">Karly Only</span>
+          <span class="limited--bedge">한정수량</span>
         </a>
       </div>
       <div class="product-list__item"><a href="#">
@@ -92,8 +92,8 @@
           </dd>
           <dd class="product--price price--original">18,980원</dd>
           <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
-          <dd><span class="karly-only">Karly Only</span></dd>
-          <dd><span class="limited--bedge">한정수량</span></dd>
+          <span class="karly-only">Karly Only</span>
+          <span class="limited--bedge">한정수량</span>
         </a>
       </div>
       <div class="product-list__item"><a href="#">
@@ -102,8 +102,8 @@
           </dd>
           <dd class="product--price">4,980원</dd>
           <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
-          <dd><span class="karly-only">Karly Only</span></dd>
-          <dd><span class="limited--bedge">한정수량</span></dd>
+          <span class="karly-only">Karly Only</span>
+          <span class="limited--bedge">한정수량</span>
         </a>
       </div>
       <div class="product-list__item"><a href="#">
@@ -122,8 +122,8 @@
           </dd>
           <dd class="product--price price--original">18,980원</dd>
           <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
-          <dd><span class="karly-only">Karly Only</span></dd>
-          <dd><span class="limited--bedge">한정수량</span></dd>
+          <span class="karly-only">Karly Only</span>
+          <span class="limited--bedge">한정수량</span>
         </a>
       </div>
       <div class="product-list__item"><a href="#">
@@ -132,8 +132,8 @@
           </dd>
           <dd class="product--price">4,980원</dd>
           <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
-          <dd><span class="karly-only">Karly Only</span></dd>
-          <dd><span class="limited--bedge">한정수량</span></dd>
+          <span class="karly-only">Karly Only</span>
+          <span class="limited--bedge">한정수량</span>
         </a>
       </div>
       <div class="product-list__item"><a href="#">
@@ -152,8 +152,8 @@
           </dd>
           <dd class="product--price price--original">18,980원</dd>
           <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
-          <dd><span class="karly-only">Karly Only</span></dd>
-          <dd><span class="limited--bedge">한정수량</span></dd>
+          <span class="karly-only">Karly Only</span>
+          <span class="limited--bedge">한정수량</span>
         </a>
       </div>
       <div class="product-list__item"><a href="#">
@@ -162,8 +162,8 @@
           </dd>
           <dd class="product--price">4,980원</dd>
           <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
-          <dd><span class="karly-only">Karly Only</span></dd>
-          <dd><span class="limited--bedge">한정수량</span></dd>
+          <span class="karly-only">Karly Only</span>
+          <span class="limited--bedge">한정수량</span>
         </a>
       </div>
       <div class="product-list__item"><a href="#">
@@ -182,20 +182,98 @@
           </dd>
           <dd class="product--price price--original">18,980원</dd>
           <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
-          <dd><span class="karly-only">Karly Only</span></dd>
-          <dd><span class="limited--bedge">한정수량</span></dd>
+          <span class="karly-only">Karly Only</span>
+          <span class="limited--bedge">한정수량</span>
         </a>
       </div>
 
     </dl>
-    <div class="product-list__buttion-wrapper">
-      <button type="submit"></button>
-      <button type="submit"></button>
+    <div class="product-list__button-wrapper">
+      <button type="submit">
+        <svg width="9" height="8" viewBox="0 0 9 8" fill="none" xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink">
+          <rect y="0.5" width="9" height="7" fill="url(#pattern0)" />
+          <defs>
+            <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
+              <use xlink:href="#image0_61_2237" transform="scale(0.111111 0.142857)" />
+            </pattern>
+            <image id="image0_61_2237" width="9" height="7"
+              xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAHCAQAAABwkq/rAAAAHUlEQVR42mNgAIPi/8X/kWkwA8SE0UQIMJAsCKMBBzk27fqtkcYAAAAASUVORK5CYII=" />
+          </defs>
+        </svg>
+      </button>
+      <button type="submit">
+        <svg width="5" height="8" viewBox="0 0 5 8" fill="none" xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink">
+          <rect y="0.5" width="5" height="7" fill="url(#pattern0)" />
+          <defs>
+            <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
+              <use xlink:href="#image0_61_2239" transform="scale(0.2 0.142857)" />
+            </pattern>
+            <image id="image0_61_2239" width="5" height="7"
+              xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAHCAQAAABqrk9lAAAAGElEQVR42mNgAIPi/8X/4QwwE5PBQJADAAKSG3cyVhtXAAAAAElFTkSuQmCC" />
+          </defs>
+        </svg>
+      </button>
       <button type="submit">1</button>
       <button type="submit">2</button>
       <button type="submit">3</button>
-      <button type="submit"></button>
-      <button type="submit"></button>
+      <button type="submit"><svg width="5" height="8" viewBox="0 0 5 8" fill="none" xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink">
+          <rect y="0.5" width="5" height="7" fill="url(#pattern0)" />
+          <defs>
+            <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
+              <use xlink:href="#image0_61_2239" transform="scale(0.2 0.142857)" />
+            </pattern>
+            <image id="image0_61_2239" width="5" height="7"
+              xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAHCAQAAABqrk9lAAAAGElEQVR42mNgAIPi/8X/4QwwE5PBQJADAAKSG3cyVhtXAAAAAElFTkSuQmCC" />
+          </defs>
+        </svg>
+      </button>
+      <button type="submit"><svg width="9" height="8" viewBox="0 0 9 8" fill="none" xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink">
+          <rect width="9" height="7" transform="matrix(-1 0 0 1 9 0.5)" fill="url(#pattern0)" />
+          <defs>
+            <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
+              <use xlink:href="#image0_61_2246" transform="scale(0.111111 0.142857)" />
+            </pattern>
+            <image id="image0_61_2246" width="9" height="7"
+              xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAHCAQAAABwkq/rAAAAHUlEQVR42mNgAIPi/8X/kWkwA8SE0UQIMJAsCKMBBzk27fqtkcYAAAAASUVORK5CYII=" />
+          </defs>
+        </svg>
+      </button>
     </div>
   </section>
+
+  <!-- modal menu -->
+  <div class="modal__cart">
+    <p class="modal__cart--item-title">[풀무원] 탱탱쫄면 (4개입)</p>
+    <div class="modal__cart__price">
+      <span class="modal__cart--item-price">4,980원</span>
+      <div class="modal__cart--item-count">
+        <button type="submit"><svg width="10" height="2" viewBox="0 0 10 2" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path d="M10 0V2H0V0H10Z" fill="#A6A6A6" />
+          </svg>
+        </button>
+        <span>1</span>
+        <button type="submit"><svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path d="M6 0V4H10V6H6V10H4V6H0V4H4V0H6Z" fill="#333333" />
+          </svg>
+        </button>
+      </div>
+    </div>
+    <div class="modal__cart__sum">
+      <span class="modal__cart__text">합계</span>
+      <span class="modal__cart__sum-price">4,980원</span>
+      <span class="modal__cart__badge">적립</span>
+      <p>구매 시 5원 적립</p>
+    </div>
+    <div class="modal__cart__button-wrapper">
+      <button class="modal__cart--close" type="submit">취소</button>
+      <button class="modal__cart--in" type="submit">장바구니 담기</button>
+    </div>
+  </div>
+
 </body>
