--- a/client/page/include/product_list.html
+++ b/client/page/include/product_list.html
@@ -188,60 +188,27 @@
       </div>
 
     </dl>
-    <div class="product-list__button-wrapper">
-      <button type="submit">
-        <svg width="9" height="8" viewBox="0 0 9 8" fill="none" xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink">
-          <rect y="0.5" width="9" height="7" fill="url(#pattern0)" />
-          <defs>
-            <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
-              <use xlink:href="#image0_61_2237" transform="scale(0.111111 0.142857)" />
-            </pattern>
-            <image id="image0_61_2237" width="9" height="7"
-              xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAHCAQAAABwkq/rAAAAHUlEQVR42mNgAIPi/8X/kWkwA8SE0UQIMJAsCKMBBzk27fqtkcYAAAAASUVORK5CYII=" />
-          </defs>
-        </svg>
-      </button>
-      <button type="submit">
-        <svg width="5" height="8" viewBox="0 0 5 8" fill="none" xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink">
-          <rect y="0.5" width="5" height="7" fill="url(#pattern0)" />
-          <defs>
-            <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
-              <use xlink:href="#image0_61_2239" transform="scale(0.2 0.142857)" />
-            </pattern>
-            <image id="image0_61_2239" width="5" height="7"
-              xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAHCAQAAABqrk9lAAAAGElEQVR42mNgAIPi/8X/4QwwE5PBQJADAAKSG3cyVhtXAAAAAElFTkSuQmCC" />
-          </defs>
-        </svg>
-      </button>
-      <button type="submit">1</button>
-      <button type="submit">2</button>
-      <button type="submit">3</button>
-      <button type="submit"><svg width="5" height="8" viewBox="0 0 5 8" fill="none" xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink">
-          <rect y="0.5" width="5" height="7" fill="url(#pattern0)" />
-          <defs>
-            <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
-              <use xlink:href="#image0_61_2239" transform="scale(0.2 0.142857)" />
-            </pattern>
-            <image id="image0_61_2239" width="5" height="7"
-              xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAHCAQAAABqrk9lAAAAGElEQVR42mNgAIPi/8X/4QwwE5PBQJADAAKSG3cyVhtXAAAAAElFTkSuQmCC" />
-          </defs>
-        </svg>
-      </button>
-      <button type="submit"><svg width="9" height="8" viewBox="0 0 9 8" fill="none" xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink">
-          <rect width="9" height="7" transform="matrix(-1 0 0 1 9 0.5)" fill="url(#pattern0)" />
-          <defs>
-            <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
-              <use xlink:href="#image0_61_2246" transform="scale(0.111111 0.142857)" />
-            </pattern>
-            <image id="image0_61_2246" width="9" height="7"
-              xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAHCAQAAABwkq/rAAAAHUlEQVR42mNgAIPi/8X/kWkwA8SE0UQIMJAsCKMBBzk27fqtkcYAAAAASUVORK5CYII=" />
-          </defs>
-        </svg>
-      </button>
+    <div class="product-list__pagenation">
+      <a href="#">
+        <image
+          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAHCAQAAABwkq/rAAAAHUlEQVR42mNgAIPi/8X/kWkwA8SE0UQIMJAsCKMBBzk27fqtkcYAAAAASUVORK5CYII="
+          alt="처음 페이지로 이동" />
+      </a>
+      <a href="#">
+        <img
+          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAHCAQAAABqrk9lAAAAGElEQVR42mNgAIPi/8X/4QwwE5PBQJADAAKSG3cyVhtXAAAAAElFTkSuQmCC"
+          alt="이전 페이지로 이동"></a>
+      <a href="#">1</a>
+      <a href="#">2</a>
+      <a href="#">3</a>
+      <a href="#">
+        <img
+          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAHCAQAAABqrk9lAAAAGUlEQVR42mMo/l/8nwECQEwCHEwGhAlRBgA2mht3SwgzrwAAAABJRU5ErkJggg=="
+          alt="다음 페이지로 이동"></a>
+      <a href="#">
+        <img
+          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAHCAQAAABwkq/rAAAAIElEQVR42mMo/l/8n4GBgQFGQ5kgDowmQZCwAMImhDkAb0k27Zcisn8AAAAASUVORK5CYII="
+          alt="마지막 페이지로 이동"></a>
     </div>
   </section>
 
