--- a/client/css/include/main.css
+++ b/client/css/include/main.css
@@ -1,48 +1,130 @@
-<style>
-      html,
-      body {
-        position: relative;
+html,
+body {
+    position: relative;
+    height: 100%;
+    width: 1050px;
+    margin: 0 auto;
+  }
+
+/* main */
+.main__recommend-product,
+.main__best-price {
+    padding: 40px 0;
+    position: relative;
+}
+.main__recommend-product__title {
+  font-weight: 700;
+  font-size: 28.43px;
+  line-height: 140%;
+  text-align: center;
+  padding: 8px;
+  margin-bottom: var(--spacing-xl);
+}
+
+/* swiper */
+.main .swiper {
+  width: 100%;
         height: 100%;
       }
 
-      body {
-        background: #eee;
-        font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-        font-size: 14px;
-        color: #000;
-        margin: 0;
-        padding: 0;
-      }
+.main .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
 
-      .swiper {
-        width: 100%;
-        height: 100%;
-      }
-
-      .swiper-slide {
-        text-align: center;
-        font-size: 18px;
-        background: #fff;
-
-        /* Center slide text vertically */
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: -webkit-flex;
-        display: flex;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        -webkit-justify-content: center;
-        justify-content: center;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        -webkit-align-items: center;
-        align-items: center;
-      }
-
-      .swiper-slide img {
-        display: block;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-    </style>
+/* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+.main .swiper-wrapper{
+  width: 300px;
+}
+.main .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.main .swiper-button-next,
+.main .swiper-button-prev  {
+  position: absolute;
+    background-color: var(--white);
+    border-radius: 50%;
+    width: 50px;
+	  height: 50px;  
+} 
+.main .swiper-button-next::after,
+.main .swiper-button-prev::after {
+    display: none;
+  }
+  .main .swiper-button-next{
+  top:259px;
+  right:-25px;
+  }
+  .main .swiper-button-prev{
+    top:259px;
+    left:-25px;
+  }
+.main .swiper-pagination{
+  display: none;
+}
+/* figure in swiper  */
+.main .swiper .swiper-slide{
+  width: 249px;
+  height: 426px;
+  position: relative;
+}
+.main .swiper img{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 320px;
+}
+.main .swiper figcaption{
+  position: absolute;
+  top: 336px;
+  left: 0;
+  font-size: 16px;
+  color: var(--content);
+  line-height: 160%;
+  font-weight: 400;
+}
+.main .swiper p{
+  font-weight: 600;
+  font-size: 21.328px;
+  line-height: 150%;
+  position: absolute;
+  top: 370px;
+  left: 0;
+}
+.main .price--sale::before {
+  content:'24%';
+  color: var(--accent-yellow);
+  font-weight: 600;
+  font-size: 21.328px;
+  line-height: 150%;
+  margin-right: var(--spacing-xs);
+}
+.main .price--sale::after {
+  display: block;
+  content:'24,000원';
+  color: var(--gray-400);
+  font-weight: 400;
+  font-size: var(--text-xs);
+  line-height: 160%;
+  text-decoration:line-through;
+  text-align: left;
+}
+.main__weeklybanner{
+  margin: 40px 0;
+}
