Add Sign-Up css markup (#11)

--- a/client/css/common/a11y.css
+++ b/client/css/common/a11y.css
@@ -2,6 +2,7 @@
 
 .a11yHidden,
 legend {
+  display: inline-block;
   overflow: hidden;
   position: absolute !important;
   clip: rect(0, 0, 0, 0);
