--- a/client/css/include/main.css
+++ b/client/css/include/main.css
@@ -1,10 +1,17 @@
-html,
+/* html,
 body {
     position: relative;
     height: 100%;
     width: 1050px;
     margin: 0 auto;
-  }
+  } */
+
+.main__recommend-product,
+.main__weeklybanner,
+.main__best-price {
+  width: 1050px;
+  margin: 0 auto;
+}
 
 /* main */
 .main__recommend-product,
