--- a/client/css/include/main.css
+++ b/client/css/include/main.css
@@ -21,7 +21,7 @@
 .main .swiper {
   width: 100%;
         height: 100%;
-      }
+}
 
 .main .swiper-slide {
     text-align: center;
@@ -42,15 +42,8 @@
     -webkit-align-items: center;
     align-items: center;
 }
-.main .swiper-wrapper{
-  width: 300px;
-}
-.main .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+
+/* swiper button */
 .main .swiper-button-next,
 .main .swiper-button-prev  {
   position: absolute;
@@ -75,17 +68,31 @@
   display: none;
 }
 /* figure in swiper  */
-.main .swiper .swiper-slide{
+
+.main .swiper-slide{
   width: 249px;
   height: 426px;
-  position: relative;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+ 
 }
 .main .swiper img{
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 320px;
+  max-width: 100%;
+	transition: all 0.2s linear
 }
+
+.main .swiper-image {
+  display: inline-block;
+  width: 249px;
+  height: 320px;
+  overflow: hidden;
+}
+.main .swiper-image:hover img {
+  -webkit-transform: scale(1.03);
+	transform: scale(1.03);
+}
+
 .main .swiper figcaption{
   position: absolute;
   top: 336px;
@@ -103,6 +110,7 @@
   top: 370px;
   left: 0;
 }
+/* sale */
 .main .price--sale::before {
   content:'24%';
   color: var(--accent-yellow);
