--- a/client/css/include/main.css
+++ b/client/css/include/main.css
@@ -79,7 +79,7 @@
 }
 .main .swiper img{
   max-width: 100%;
-	transition: all 0.2s linear
+	transition: all 0.5s ease-in-out 0s;
 }
 
 .main .swiper-image {
@@ -89,8 +89,8 @@
   overflow: hidden;
 }
 .main .swiper-image:hover img {
-  -webkit-transform: scale(1.03);
-	transform: scale(1.03);
+  -webkit-transform: scale(1.02);
+	transform: scale(1.02);
 }
 
 .main .swiper figcaption{
