--- a/client/css/style.css
+++ b/client/css/style.css
@@ -14,6 +14,7 @@
 @import url(./include/main_banner.css);
 @import url(./include/navigation.css);
 @import url(./include/best_product_list.css);
+@import url(./include/login.css);
 @import url(./include/signup.css);
 @import url(./include/review_popup.css);
 @import url(./include/inquiry_popup.css);
