--- a/client/page/include/main.html
+++ b/client/page/include/main.html
@@ -31,6 +31,7 @@
                 </figcaption>
               </figure>
               <p>4,980원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -43,6 +44,7 @@
                 </figcaption>
               </figure>
               <p>32,500원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -54,6 +56,7 @@
                 </figcaption>
               </figure>
               <p>25,000원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -65,6 +68,7 @@
                 </figcaption>
               </figure>
               <p class="price--sale">18,900원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -76,6 +80,7 @@
                 </figcaption>
               </figure>
               <p>4,980원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -88,6 +93,7 @@
                 </figcaption>
               </figure>
               <p>32,500원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -99,6 +105,7 @@
                 </figcaption>
               </figure>
               <p>25,000원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -110,6 +117,7 @@
                 </figcaption>
               </figure>
               <p class="price--sale">18,900원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -121,6 +129,7 @@
                 </figcaption>
               </figure>
               <p>4,980원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -133,6 +142,7 @@
                 </figcaption>
               </figure>
               <p>32,500원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -144,6 +154,7 @@
                 </figcaption>
               </figure>
               <p>25,000원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -155,6 +166,7 @@
                 </figcaption>
               </figure>
               <p class="price--sale">18,900원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -166,6 +178,7 @@
                 </figcaption>
               </figure>
               <p>4,980원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -178,6 +191,7 @@
                 </figcaption>
               </figure>
               <p>32,500원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -189,6 +203,7 @@
                 </figcaption>
               </figure>
               <p>25,000원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -200,6 +215,7 @@
                 </figcaption>
               </figure>
               <p class="price--sale">18,900원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
           </div>
         </div>
@@ -229,7 +245,7 @@
       <h2 class="a11yHidden">가격 할인 상품</h2>
       <p class="main__recommend-product__title">놓치면 후회할 가격</p>
       <div class="swiper-container">
-        <div class="swiper mySwiper mainSwiper">
+        <div class="swiper mySwiper priceSwiper">
 
           <div class="swiper-wrapper">
             <div class="swiper-slide">
@@ -242,6 +258,7 @@
                 </figcaption>
               </figure>
               <p>4,980원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -254,6 +271,7 @@
                 </figcaption>
               </figure>
               <p>32,500원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -265,6 +283,7 @@
                 </figcaption>
               </figure>
               <p>25,000원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -276,6 +295,7 @@
                 </figcaption>
               </figure>
               <p class="price--sale">18,900원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -287,6 +307,7 @@
                 </figcaption>
               </figure>
               <p>4,980원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -299,6 +320,7 @@
                 </figcaption>
               </figure>
               <p>32,500원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -310,6 +332,7 @@
                 </figcaption>
               </figure>
               <p>25,000원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -321,6 +344,7 @@
                 </figcaption>
               </figure>
               <p class="price--sale">18,900원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -332,6 +356,7 @@
                 </figcaption>
               </figure>
               <p>4,980원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -344,6 +369,7 @@
                 </figcaption>
               </figure>
               <p>32,500원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -355,6 +381,7 @@
                 </figcaption>
               </figure>
               <p>25,000원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -366,6 +393,7 @@
                 </figcaption>
               </figure>
               <p class="price--sale">18,900원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -377,6 +405,7 @@
                 </figcaption>
               </figure>
               <p>4,980원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -389,6 +418,7 @@
                 </figcaption>
               </figure>
               <p>32,500원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -400,6 +430,7 @@
                 </figcaption>
               </figure>
               <p>25,000원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
             <div class="swiper-slide">
               <figure>
@@ -411,6 +442,7 @@
                 </figcaption>
               </figure>
               <p class="price--sale">18,900원</p>
+              <button type="button" class="modal--cart-icon"></button>
             </div>
           </div>
         </div>
