Add Modal Cart icon button in porduct list(#13)

--- a/client/page/include/product_list.html
+++ b/client/page/include/product_list.html
@@ -45,6 +45,7 @@
           <span class="karly-only">Karly Only</span>
           <span class="limited--bedge">한정수량</span>
         </a>
+        <button type="button" class="modal--cart-icon"></button>
       </div>
       <div class="product-list__item"><a href="#">
           <dt id="jyoleudi_sun_cushion" class="product--title">[온더바디] 죠르디 시카 자석 선쿠션</dt>
@@ -53,7 +54,7 @@
           </dd>
           <dd class="product--price">32,500원</dd>
           <dd class="product--summary">끈적임 없이 보송한 무기자차 선쿠션</dd>
-        </a>
+        </a> <button type="button" class="modal--cart-icon"></button>
       </div>
       <div class="product-list__item"><a href="#">
           <dt id="baby_laundry_detergent" class="product--title">[프로쉬] 베이비 세탁세제</dt>
@@ -64,7 +65,7 @@
           <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
           <span class="karly-only">Karly Only</span>
           <span class="limited--bedge">한정수량</span>
-        </a>
+        </a> <button type="button" class="modal--cart-icon"></button>
       </div>
       <div class="product-list__item"><a href="#">
           <dt id="tangtang_jjolmyeon" class="product--title">[풀무원] 탱탱쫄면 (4개입)</dt>
@@ -74,7 +75,7 @@
           <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
           <span class="karly-only">Karly Only</span>
           <span class="limited--bedge">한정수량</span>
-        </a>
+        </a> <button type="button" class="modal--cart-icon"></button>
       </div>
       <div class="product-list__item"><a href="#">
           <dt id="jyoleudi_sun_cushion" class="product--title">[온더바디] 죠르디 시카 자석 선쿠션</dt>
@@ -83,7 +84,7 @@
           </dd>
           <dd class="product--price">32,500원</dd>
           <dd class="product--summary">끈적임 없이 보송한 무기자차 선쿠션</dd>
-        </a>
+        </a> <button type="button" class="modal--cart-icon"></button>
       </div>
       <div class="product-list__item"><a href="#">
           <dt id="baby_laundry_detergent" class="product--title">[프로쉬] 베이비 세탁세제</dt>
@@ -94,7 +95,7 @@
           <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
           <span class="karly-only">Karly Only</span>
           <span class="limited--bedge">한정수량</span>
-        </a>
+        </a> <button type="button" class="modal--cart-icon"></button>
       </div>
       <div class="product-list__item"><a href="#">
           <dt id="tangtang_jjolmyeon" class="product--title">[풀무원] 탱탱쫄면 (4개입)</dt>
@@ -104,7 +105,7 @@
           <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
           <span class="karly-only">Karly Only</span>
           <span class="limited--bedge">한정수량</span>
-        </a>
+        </a> <button type="button" class="modal--cart-icon"></button>
       </div>
       <div class="product-list__item"><a href="#">
           <dt id="jyoleudi_sun_cushion" class="product--title">[온더바디] 죠르디 시카 자석 선쿠션</dt>
@@ -113,7 +114,7 @@
           </dd>
           <dd class="product--price">32,500원</dd>
           <dd class="product--summary">끈적임 없이 보송한 무기자차 선쿠션</dd>
-        </a>
+        </a> <button type="button" class="modal--cart-icon"></button>
       </div>
       <div class="product-list__item"><a href="#">
           <dt id="baby_laundry_detergent" class="product--title">[프로쉬] 베이비 세탁세제</dt>
@@ -124,7 +125,7 @@
           <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
           <span class="karly-only">Karly Only</span>
           <span class="limited--bedge">한정수량</span>
-        </a>
+        </a> <button type="button" class="modal--cart-icon"></button>
       </div>
       <div class="product-list__item"><a href="#">
           <dt id="tangtang_jjolmyeon" class="product--title">[풀무원] 탱탱쫄면 (4개입)</dt>
@@ -134,7 +135,7 @@
           <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
           <span class="karly-only">Karly Only</span>
           <span class="limited--bedge">한정수량</span>
-        </a>
+        </a> <button type="button" class="modal--cart-icon"></button>
       </div>
       <div class="product-list__item"><a href="#">
           <dt id="jyoleudi_sun_cushion" class="product--title">[온더바디] 죠르디 시카 자석 선쿠션</dt>
@@ -143,7 +144,7 @@
           </dd>
           <dd class="product--price">32,500원</dd>
           <dd class="product--summary">끈적임 없이 보송한 무기자차 선쿠션</dd>
-        </a>
+        </a> <button type="button" class="modal--cart-icon"></button>
       </div>
       <div class="product-list__item"><a href="#">
           <dt id="baby_laundry_detergent" class="product--title">[프로쉬] 베이비 세탁세제</dt>
@@ -154,7 +155,7 @@
           <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
           <span class="karly-only">Karly Only</span>
           <span class="limited--bedge">한정수량</span>
-        </a>
+        </a> <button type="button" class="modal--cart-icon"></button>
       </div>
       <div class="product-list__item"><a href="#">
           <dt id="tangtang_jjolmyeon" class="product--title">[풀무원] 탱탱쫄면 (4개입)</dt>
@@ -164,7 +165,7 @@
           <dd class="product--summary">튀기지 않아 부담없는 매콤함</dd>
           <span class="karly-only">Karly Only</span>
           <span class="limited--bedge">한정수량</span>
-        </a>
+        </a> <button type="button" class="modal--cart-icon"></button>
       </div>
       <div class="product-list__item"><a href="#">
           <dt id="jyoleudi_sun_cushion" class="product--title">[온더바디] 죠르디 시카 자석 선쿠션</dt>
@@ -173,7 +174,7 @@
           </dd>
           <dd class="product--price">32,500원</dd>
           <dd class="product--summary">끈적임 없이 보송한 무기자차 선쿠션</dd>
-        </a>
+        </a> <button type="button" class="modal--cart-icon"></button>
       </div>
       <div class="product-list__item"><a href="#">
           <dt id="baby_laundry_detergent" class="product--title">[프로쉬] 베이비 세탁세제</dt>
@@ -184,7 +185,7 @@
           <dd class="product--summary">성분을 꼼꼼히 다져 골라 더욱 편안한</dd>
           <span class="karly-only">Karly Only</span>
           <span class="limited--bedge">한정수량</span>
-        </a>
+        </a> <button type="button" class="modal--cart-icon"></button>
       </div>
 
     </dl>
